scripts/nullaway/wpi/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8.txt
../wpi/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/sparqlscape/SparqlInterface.java:77: error: [NullAway] dereferenced expression typeResult is @Nullable
            if (typeResult.size() > 0) {
                          ^
    (see http://t.uber.com/nullaway )
../wpi/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/sparqlscape/SparqlInterface.java:78: error: [NullAway] dereferenced expression typeResult.get(0).getResource("type") is @Nullable
                typeURI = typeResult.get(0).getResource("type").toString();
                                                               ^
    (see http://t.uber.com/nullaway )
../wpi/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/sparqlscape/SparqlInterface.java:96: error: [NullAway] enhanced-for expression results is @Nullable
            for (Row row : results) {
                           ^
    (see http://t.uber.com/nullaway )
../wpi/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/sparqlscape/SparqlInterface.java:97: error: [NullAway] dereferenced expression row.get("pred") is @Nullable
                String pred = row.get("pred").getURI();
                                             ^
    (see http://t.uber.com/nullaway )
../wpi/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/sparqlscape/SparqlInterface.java:105: error: [NullAway] passing @Nullable parameter 'pred' where @NonNull is required
                        outList.add(new LinkTriple(new SparqlData(uri, typeURI), new SparqlData(pred, true), new SparqlData(dst, dstType)));
                                                                                                ^
    (see http://t.uber.com/nullaway )
../wpi/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/sparqlscape/SparqlInterface.java:110: error: [NullAway] passing @Nullable parameter 'pred' where @NonNull is required
                        outList.add(new LinkTriple(new SparqlData(src, srcType), new SparqlData(pred, true), new SparqlData(uri, typeURI)));
                                                                                                ^
    (see http://t.uber.com/nullaway )
../wpi/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/sparqlscape/SparqlInterface.java:229: error: [NullAway] dereferenced expression results is @Nullable
                            String colName = results.getResultVars().get(0);
                                                    ^
    (see http://t.uber.com/nullaway )
../wpi/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/sparqlscape/SparqlInterface.java:231: error: [NullAway] dereferenced expression row.getResource(colName) is @Nullable
                                System.out.println(row.getResource(colName).getURI());
                                                                           ^
    (see http://t.uber.com/nullaway )
../wpi/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/sparqlscape/SparqlInterface.java:232: error: [NullAway] passing @Nullable parameter 'row.getResource(colName)' where @NonNull is required
                                nameList.put(new LinkTriple(new SparqlData(attrs.get(key).toString(), true), new SparqlData("sparqlLink", true), row.getResource(colName)), 1);
                                                                                                                                                                ^
    (see http://t.uber.com/nullaway )
../wpi/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/sparqlscape/SparqlInterface.java:254: error: [NullAway] dereferenced expression results is @Nullable
                    List<String> resVars = results.getResultVars();
                                                  ^
    (see http://t.uber.com/nullaway )
../wpi/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/sparqlscape/SparqlInterface.java:271: error: [NullAway] dereferenced expression row.getResource(srcName) is @Nullable
                        String srcURI = row.getResource(srcName).getURI();
                                                                ^
    (see http://t.uber.com/nullaway )
../wpi/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/sparqlscape/SparqlInterface.java:274: error: [NullAway] dereferenced expression row.getResource(predName) is @Nullable
                            edgeURI = row.getResource(predName).getURI();
                                                               ^
    (see http://t.uber.com/nullaway )
../wpi/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/sparqlscape/SparqlInterface.java:277: error: [NullAway] dereferenced expression row.get(dstName) is @Nullable
                            if (row.get(dstName).isURI())
                                                ^
    (see http://t.uber.com/nullaway )
../wpi/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/sparqlscape/SparqlInterface.java:278: error: [NullAway] dereferenced expression row.getResource(dstName) is @Nullable
                                dstURI = row.getResource(dstName).getURI();
                                                                 ^
    (see http://t.uber.com/nullaway )
../wpi/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/sparqlscape/SparqlInterface.java:280: error: [NullAway] dereferenced expression row.getLiteral(dstName) is @Nullable
                                dstURI = row.getLiteral(dstName).toString();
                                                                ^
    (see http://t.uber.com/nullaway )
../wpi/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/sparql/SparqlData.java:20: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.value = value;
                   ^
    (see http://t.uber.com/nullaway )
../wpi/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/sparql/SparqlData.java:22: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.type = type;
                  ^
    (see http://t.uber.com/nullaway )
../wpi/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/sparql/Row.java:14: error: [NullAway] dereferenced expression get(colName) is @Nullable
        return get(colName).isURI();
                           ^
    (see http://t.uber.com/nullaway )
../wpi/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/sparql/Row.java:24: error: [NullAway] dereferenced expression get(colName) is @Nullable
        return get(colName).toString();
                           ^
    (see http://t.uber.com/nullaway )
../wpi/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/json/XML.java:96: error: [NullAway] dereferenced expression string is @Nullable
        for (int i = 0, len = string.length(); i < len; i++) {
                                    ^
    (see http://t.uber.com/nullaway )
../wpi/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/json/XML.java:410: error: [NullAway] passing @Nullable parameter 'v' where @NonNull is required
                b.append(toString(v, (tagName == null) ? "array" : tagName));
                                  ^
    (see http://t.uber.com/nullaway )
../wpi/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/json/CDL.java:211: error: [NullAway] dereferenced expression ja is @Nullable
        for (int i = 0; i < ja.length(); i += 1) {
                              ^
    (see http://t.uber.com/nullaway )
../wpi/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/json/CDL.java:247: error: [NullAway] dereferenced expression ja is @Nullable
        JSONObject jo = ja.optJSONObject(0);
                          ^
    (see http://t.uber.com/nullaway )
../wpi/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/json/Test.java:313: error: [NullAway] dereferenced expression a is @Nullable
            System.out.println(a.toString(4));
                                ^
    (see http://t.uber.com/nullaway )
../wpi/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/json/Test.java:316: error: [NullAway] dereferenced expression a is @Nullable
            System.out.println(a.toString(4));
                                ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
25 errors
